name:               universe
version:            1.1.1
synopsis:           A class for finite and recursively enumerable types.
description:
  A class for finite and recursively enumerable types and some helper functions for enumerating them
  .
  @
  class Universe a where universe :: [a]
  class Universe a => Finite a where universeF :: [a]; universeF = universe
  @
  .
  This also provides instances from @universe-instances-*" packages.

homepage:           https://github.com/dmwit/universe
license:            BSD3
license-file:       LICENSE
author:             Daniel Wagner
maintainer:         me@dmwit.com
copyright:          Daniel Wagner 2014
category:           Data
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: changelog
tested-with:
  GHC ==8.8.1 || ==8.6.4 || ==8.4.4 || ==8.2.2 || ==8.0.2 || ==7.10.3 || ==7.8.4 || ==7.6.3 || ==7.4.2 || ==7.0.4

source-repository head
  type:     git
  location: https://github.com/dmwit/universe

source-repository this
  type:     git
  location: https://github.com/dmwit/universe
  tag:      1.1

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    Data.Universe
    Data.Universe.Instances.Reverse

  build-depends:
      universe-base                >=1.1   && <1.1.2
    , universe-instances-extended  >=1.1.1 && <1.1.2
    , universe-reverse-instances   >=1.1   && <1.1.1
    , universe-dependent-sum       >=1.1   && <1.1.1
