cabal-version:      2.2
name:               universe
version:            1.2.3
synopsis:           A class for finite and recursively enumerable types.
description:
  A class for finite and recursively enumerable types and some helper functions for enumerating them
  .
  @
  class Universe a where universe :: [a]
  class Universe a => Finite a where universeF :: [a]; universeF = universe
  @
  .
  This also provides instances from @universe-instances-*" packages.

homepage:           https://github.com/dmwit/universe
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Wagner
maintainer:         me@dmwit.com
copyright:          Daniel Wagner 2014
category:           Data
build-type:         Simple
extra-source-files: changelog
tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1

source-repository head
  type:     git
  location: https://github.com/dmwit/universe
  subdir:   universe

library
  default-language:         Haskell2010
  hs-source-dirs:           src
  exposed-modules:
    Data.Universe
    Data.Universe.Instances.Reverse

  build-depends:
      universe-base                >=1.1.4 && <1.1.5
    , universe-instances-extended  >=1.1.4 && <1.1.5
    , universe-reverse-instances   >=1.1.2 && <1.1.3
    , universe-some                >=1.2.2 && <1.2.3

  if impl(ghc >=9.0)
    -- these flags may abort compilation with GHC-8.10
    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode

  x-docspec-extra-packages: base
