name:          universe-instances-base
version:       1.1
synopsis:      Universe instances for types from the base package
description:
  __DEPRECATED:__ instances are moved to @universe-base@ package

  @universe-base@ package provides instances for types from GHC-boot libraries.

homepage:      https://github.com/dmwit/universe
license:       BSD3
license-file:  LICENSE
author:        Daniel Wagner
maintainer:    me@dmwit.com
copyright:     Daniel Wagner 2014
category:      Data
build-type:    Simple
cabal-version: >=1.10
tested-with:
  GHC ==8.8.1 || ==8.6.4 || ==8.4.4 || ==8.2.2 || ==8.0.2 || ==7.10.3 || ==7.8.4 || ==7.6.3 || ==7.4.2 || ==7.0.4

source-repository head
  type:     git
  location: https://github.com/dmwit/universe

source-repository this
  type:     git
  location: https://github.com/dmwit/universe
  tag:      1.1

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Data.Universe.Instances.Base
  build-depends:
      base           >=4   && <5
    , universe-base  >=1.1 && <1.1.1
