name:                universe-instances-base
version:             1.1
synopsis:            Universe instances for types from the base package
description:
homepage:            https://github.com/dmwit/universe
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          me@dmwit.com
copyright:           Daniel Wagner 2014
category:            Data
build-type:          Simple
cabal-version:       >=1.10
tested-with:
  GHC==7.0.4,
  GHC==7.2.2,
  GHC==7.4.2,
  GHC==7.6.3,
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.2

source-repository head
    type:            git
    location:        https://github.com/dmwit/universe
source-repository this
    type:            git
    location:        https://github.com/dmwit/universe
    tag:             1.1

library
  exposed-modules:     Data.Universe.Instances.Base
  other-extensions:    TypeFamilies
  build-depends:       base >=4 && <5,
                       containers >=0.4 && <0.6,
                       universe-base >=1.0 && <1.2
  default-language:    Haskell2010
  if impl(ghc >= 7.10)
    ghc-options:       -fno-warn-tabs

test-suite tests
  default-language:    Haskell2010
  other-extensions:    ScopedTypeVariables
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      tests
  ghc-options:         -Wall
  build-depends:       base, containers, universe-base, universe-instances-base,
                       QuickCheck >=2.11 && <2.12
