name:                universe-instances-containers
version:             1.1
synopsis:            Universe instances for types from the containers package
description:
  A class for finite and recursively enumerable types and some helper functions for enumerating them
  defined in @universe-base@ package:
  .
  @
  class Universe a where universe :: [a]
  class Universe a => Finite a where universeF :: [a]; universeF = universe
  @
  .
  This package provides instances for types in @containers@ package.

homepage:            https://github.com/dmwit/universe
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          me@dmwit.com
copyright:           Daniel Wagner 2014
category:            Data
build-type:          Simple
cabal-version:       >=1.10
tested-with:
  GHC==7.0.4,
  GHC==7.2.2,
  GHC==7.4.2,
  GHC==7.6.3,
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.3

source-repository head
    type:            git
    location:        https://github.com/dmwit/universe
source-repository this
    type:            git
    location:        https://github.com/dmwit/universe
    tag:             1.0

library
  exposed-modules:     Data.Universe.Instances.Containers
  ghc-options:         -Wall
  build-depends:       base >=4 && <5,
                       containers >=0.4 && <0.7,
                       universe-base >=1.1 && <1.2
  default-language:    Haskell2010
  if impl(ghc >= 7.10)
    ghc-options:       -fno-warn-tabs

test-suite tests
  default-language:    Haskell2010
  other-extensions:    ScopedTypeVariables
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      tests
  ghc-options:         -Wall
  build-depends:       base, containers, universe-base,
                       universe-instances-base, universe-instances-containers,
                       QuickCheck >=2.11 && <2.13
