name:                universe-instances-extended
version:             1.0.0.1
synopsis:            Universe instances for types from select extra packages
homepage:            https://github.com/dmwit/universe
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          me@dmwit.com
copyright:           Daniel Wagner 2014
category:            Data
build-type:          Simple
cabal-version:       >=1.10
source-repository head
    type:            git
    location:        https://github.com/dmwit/universe
source-repository this
    type:            git
    location:        https://github.com/dmwit/universe
    tag:             instances-extended-1.0.0.1

library
  exposed-modules:     Data.Universe.Instances.Extended
  build-depends:       adjunctions             >=4   && <4.3,
                       base                    >=4   && <5  ,
                       comonad                 >=4   && <4.3,
                       universe-instances-base >=1.0 && <1.1,
                       void                    >=0.1 && <0.8
  default-language:    Haskell2010
