name:                universe-instances-extended
version:             1.1
synopsis:            Universe instances for types from select extra packages
description:
homepage:            https://github.com/dmwit/universe
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          me@dmwit.com
copyright:           Daniel Wagner 2014
category:            Data
build-type:          Simple
cabal-version:       >=1.10
tested-with:
  GHC==7.0.4,
  GHC==7.2.2,
  GHC==7.4.2,
  GHC==7.6.3,
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.2

source-repository head
    type:            git
    location:        https://github.com/dmwit/universe
source-repository this
    type:            git
    location:        https://github.com/dmwit/universe
    tag:             instances-extended-1.1

library
  exposed-modules:     Data.Universe.Instances.Extended
  build-depends:       adjunctions             >=4   && <4.5,
                       base                    >=4   && <5  ,
                       comonad                 >=4   && <5.1,
                       universe-instances-base >=1.0 && <1.2,
                       universe-base           >=1.1 && <1.2,
                       void                    >=0.1 && <0.8
  default-language:    Haskell2010
  if impl(ghc >= 7.10)
    ghc-options:       -fno-warn-tabs
