name:                universe-reverse-instances
version:             2
synopsis:            instances of standard classes that are made possible by enumerations
homepage:            https://github.com/dmwit/universe
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          me@dmwit.com
copyright:           Daniel Wagner 2014
category:            Data
build-type:          Simple
cabal-version:       >=1.10
source-repository head
    type:            git
    location:        https://github.com/dmwit/universe
source-repository this
    type:            git
    location:        https://github.com/dmwit/universe
    tag:             1.0

library
  exposed-modules:     Data.Universe.Instances.Eq,
                       Data.Universe.Instances.Ord,
                       Data.Universe.Instances.Read,
                       Data.Universe.Instances.Show,
                       Data.Universe.Instances.Traversable
  build-depends:       base                    >=4   && <5  ,
                       containers              >=0.4 && <0.6,
                       universe-base           >=2   && <3
  default-language:    Haskell2010
  ghc-options:         -Wall
