name:                universe-instances-trans
version:             1.0.0.1
synopsis:            Universe instances for types from the transformers and mtl packages
homepage:            https://github.com/dmwit/universe
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          me@dmwit.com
copyright:           Daniel Wagner 2014
category:            Data
build-type:          Simple
cabal-version:       >=1.10
source-repository head
    type:            git
    location:        https://github.com/dmwit/universe
source-repository this
    type:            git
    location:        https://github.com/dmwit/universe
    tag:             1.0.0.1

library
  exposed-modules:     Data.Universe.Instances.Trans
  build-depends:       base                    >=4   && <5  ,
                       mtl                     >=1.0 && <2.3,
                       transformers            >=0.2 && <0.5,
                       universe-base           >=1.0 && <1.1,
                       universe-instances-base >=1.0 && <1.1
  default-language:    Haskell2010
  other-extensions:    FlexibleContexts
